--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-imagemin": "^0.7.1",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jekyll": "^0.4.2"
   }
 }
