--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "example-project",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/egardner/lisaeisner.git"
+    },
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
