Press pages as single posts

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,6 @@ exclude: ['node_modules', 'README.md', '.sass-cache', 'gruntfile.js', 'package.j
 
 # Build settings
 markdown: kramdown
-permalink: none
+# permalink: none
 sass:
     style: compressed
